@@ -1,3 +1,7 @@
+Major changes in 3.38.2:
+* Never reset completed calendars !150 #567
+* Updated translations
+
 Major changes in 3.38.1:
 * Updated translations
 
